@@ -24,6 +24,8 @@ ubiquity (1.7.2) UNRELEASED; urgency=low
     when "Other Remote" is selected. (LP: #157233)
   * Check for files related to mythbuntu autostart rather than assuming
     they don't already exist. (LP: #173378)
+  * Don't allow the user to progress on non mythbuntu master backend roles
+    unless they test their connection. (LP: #164979)
 
  -- Evan Dandrea <evand@ubuntu.com>  Mon, 03 Dec 2007 18:22:51 -0500
 
